--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
+        "dev:api": "NODE_ENV=dev nodemon",
         "build": "run-p type-check \"build-only {@}\" --",
         "preview": "vite preview",
         "test:unit": "vitest",
@@ -14,33 +15,50 @@
         "format": "prettier --write src/"
     },
     "dependencies": {
+        "@cmmv/auth": "^0.8.16",
+        "@cmmv/core": "^0.8.16",
+        "@cmmv/http": "^0.8.16",
+        "@cmmv/repository": "^0.8.16",
         "@cmmv/ui": "^0.0.12",
+        "@cmmv/view": "^0.8.16",
+        "@swc-node/core": "^1.13.3",
+        "@swc-node/register": "^1.10.9",
+        "@swc/core": "^1.10.16",
         "@tailwindcss/vite": "^4.0.6",
+        "class-transformer": "^0.5.1",
+        "class-validator": "^0.14.1",
         "dotenv": "^16.4.7",
+        "fast-json-stringify": "^6.0.1",
+        "mongodb": "^6.13.0",
         "pinia": "^2.3.1",
         "tailwindcss": "^4.0.6",
+        "typeorm": "^0.3.20",
         "vue": "^3.5.13",
+        "vue-recaptcha": "3.0.0-alpha.6",
+        "vue-recaptcha-v3": "^2.0.1",
         "vue-router": "^4.5.0"
     },
     "devDependencies": {
         "@tsconfig/node22": "^22.0.0",
         "@types/jsdom": "^21.1.7",
-        "@types/node": "^22.13.1",
+        "@types/node": "^22.13.2",
         "@vitejs/plugin-vue": "^5.2.1",
         "@vitest/eslint-plugin": "1.1.25",
         "@vue/eslint-config-prettier": "^10.2.0",
         "@vue/eslint-config-typescript": "^14.4.0",
         "@vue/test-utils": "^2.4.6",
         "@vue/tsconfig": "^0.7.0",
-        "eslint": "^9.20.0",
+        "eslint": "^9.20.1",
         "eslint-plugin-vue": "^9.32.0",
         "jiti": "^2.4.2",
         "jsdom": "^26.0.0",
+        "nodemon": "^3.1.9",
         "npm-run-all2": "^7.0.2",
-        "prettier": "^3.5.0",
+        "prettier": "^3.5.1",
+        "ts-node": "^10.9.2",
         "typescript": "~5.7.3",
         "vite": "^6.1.0",
-        "vite-plugin-vue-devtools": "^7.7.1",
+        "vite-plugin-vue-devtools": "^7.7.2",
         "vitest": "^3.0.5",
         "vue-tsc": "^2.2.0"
     }
