--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -14,6 +14,31 @@
         "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
         "module": "ESNext",
         "moduleResolution": "Bundler",
-        "types": ["node"]
+        "esModuleInterop": false,
+        "sourceMap": true,
+        "baseUrl": ".",
+        "types": ["node"],
+        "paths": {
+            "@models": ["api/models"],
+            "@models/*": ["api/models/*"],
+            "@modules": ["api/modules"],
+            "@modules/*": ["api/modules/*"],
+            "@services": ["api/services"],
+            "@services/*": ["api/services/*"],
+            "@controllers": ["api/controllers"],
+            "@controllers/*": ["api/controllers/*"],
+            "@contracts": ["api/contracts"],
+            "@contracts/*": ["api/contracts/*"],
+            "@entities": ["api/entities"],
+            "@entities/*": ["api/entities/*"],
+            "@gateways": ["api/gateways"],
+            "@gateways/*": ["api/gateways/*"],
+            "@protos": ["api/protos"],
+            "@protos/*": ["api/protos/*"],
+            "@generated": [".generated"],
+            "@generated/*": [".generated/*"],
+            "@g": [".generated"],
+            "@g/*": [".generated/*"]
+        }
     }
 }
