--- a/turbo.json
+++ b/turbo.json
@@ -1,5 +1,6 @@
 {
     "$schema": "https://turbo.build/schema.json",
+    "globalDependencies": ["packages/client/**", "packages/dashboard/**"],
     "tasks": {
         "dev": {
             "cache": false,
