--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,10 +1,26 @@
 {
     "name": "@cmmv/client",
     "version": "0.0.1",
-    "description": "",
-    "main": "index.ts",
+    "description": "Restful, RPC and GraphQL integration module for Vue3, Angular and React",
+    "type": "module",
+    "main": "./dist/cjs/main.js",
+    "module": "./dist/esm/main.js",
+    "types": "./dist/types/main.d.ts",
+    "exports": {
+        ".": {
+            "import": "./dist/esm/main.js",
+            "require": "./dist/cjs/main.js",
+            "types": "./dist/index.d.ts"
+        }
+    },
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "postinstall": "pnpm approve-builds",
+        "build": "cmmv build",
+        "release": "cmmv release",
+        "lint": "cmmv lint",
+        "prepare": "husky",
+        "test": "vitest",
+        "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
     },
     "keywords": [
         "cmmv",
@@ -23,6 +39,21 @@
         "vue-router": "^4.5.0"
     },
     "devDependencies": {
-        "@vue/tsconfig": "^0.7.0"
+        "@cmmv/cli": "^0.7.4",
+        "@commitlint/cli": "^19.8.0",
+        "@commitlint/config-angular": "^19.8.0",
+        "@commitlint/config-conventional": "^19.8.0",
+        "@tsconfig/node22": "^22.0.0",
+        "@types/node": "^22.13.10",
+        "@vue/tsconfig": "^0.7.0",
+        "conventional-changelog": "^6.0.0",
+        "conventional-changelog-cli": "^5.0.0",
+        "husky": "^9.1.7",
+        "lint-staged": "^15.4.3",
+        "run-p": "^0.0.0",
+        "tslib": "^2.8.1",
+        "typescript": "~5.7.3",
+        "vitest": "^3.0.8",
+        "vue-tsc": "^2.2.8"
     }
 }
