--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,11 @@
 {
+    "compilerOptions": {
+        "baseUrl": ".",
+        "paths": {
+            "@cmmv/client": ["packages/client/src/index.ts"],
+            "@cmmv/dashboard": ["packages/dashboard/src/index.ts"]
+        }
+    },
     "extends": "@tsconfig/node22/tsconfig.json",
     "exclude": ["**/dist/**/*", "**/node_modules/**/*"]
 }
