--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -23,27 +23,31 @@
             ".generated",
             "src/models",
             "src/entities",
-            "public"
+            "public",
+            "database.sqlite-journal",
+            "database.sqlite"
         ]
     },
     "dependencies": {
-        "@cmmv/auth": "^0.8.33",
-        "@cmmv/core": "^0.8.33",
-        "@cmmv/http": "^0.8.33",
-        "@cmmv/repository": "^0.8.33",
+        "@cmmv/auth": "^0.9.0",
+        "@cmmv/core": "^0.9.0",
+        "@cmmv/graphql": "^0.9.0",
+        "@cmmv/http": "^0.9.0",
+        "@cmmv/repository": "^0.9.0",
+        "@cmmv/sandbox": "^0.9.0",
         "@loskir/styled-qr-code-node": "^1.5.2",
         "sqlite3": "^5.1.7"
     },
     "devDependencies": {
         "@cmmv/cli": "^0.7.4",
-        "@swc-node/register": "^1.10.9",
+        "@swc-node/register": "^1.10.10",
         "@tsconfig/node22": "^22.0.0",
-        "@types/node": "^22.13.5",
+        "@types/node": "^22.13.10",
         "conventional-changelog": "^6.0.0",
         "conventional-changelog-cli": "^5.0.0",
-        "esbuild": "^0.25.0",
+        "esbuild": "^0.25.1",
         "husky": "^9.1.7",
-        "lint-staged": "^15.4.3",
-        "vitest": "^3.0.6"
+        "lint-staged": "^15.5.0",
+        "vitest": "^3.0.8"
     }
 }
